traces/bug_403.txt
src/medit/vector.c:386: error: DEAD_STORE
  The value written to &scalemax (type double) is never used.
Showing all 1 steps of the trace


src/medit/vector.c:386:3: Write of unused value
384.   
385.     scalemin = sc->dmax * SCALV;
386.     scalemax = 15*scalemin;
         ^
387.     mesh->mark++;
388.     glLineWidth(3.0);
